# services/auth/cmd/server/docs/swagger.json
@@ -7,6 +7,40 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/auth/signup": {
+            "post": {
+                "description": "SingUp",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "SingUp",
+                "parameters": [
+                    {
+                        "description": "SingUp request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignUpReqBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SingUp success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "user already exists",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/healthz": {
             "get": {
                 "description": "Healthz check",
@@ -38,6 +72,23 @@
         }
     },
     "definitions": {
+        "auth.SignUpReqBody": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 12
+                }
+            }
+        },
         "healthz.HealthzRespBody": {
             "type": "object",
             "required": [
