# services/auth/internal/server/handlers/handlers.go
@@ -3,7 +3,7 @@ package handlers
 import (
 	_ "github.com/DanHerasymenko/GoDelivery/services/auth-service/cmd/server/docs"
 	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/config"
-	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/server/handlers/auth"
+	ah "github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/server/handlers/auth"
 	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/server/handlers/healthz"
 	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/server/middleware"
 	"github.com/gin-gonic/gin"
@@ -13,7 +13,7 @@ import (
 
 type Handlers struct {
 	Healthz *healthz.Handler
-	Auth *auth.Handler
+	Auth    *ah.Handler
 
 	mdlwrs *middleware.Middlewares
 }
@@ -21,6 +21,7 @@ type Handlers struct {
 func NewHandlers(cfg *config.Config, mdlwrs *middleware.Middlewares) *Handlers {
 	return &Handlers{
 		Healthz: healthz.NewHandler(cfg),
+		Auth:    ah.NewHandler(cfg),
 
 		mdlwrs: mdlwrs,
 	}
@@ -40,6 +41,6 @@ func (h *Handlers) RegisterRoutes(router *gin.Engine) {
 	healtz.GET("/", h.Healthz.HealthzCheck)
 
 	// Auth group
-	auth :=  api.Group("auth")
-	auth.POST("signup", h.Auth.SingUp)
+	auth := api.Group("/auth")
+	auth.POST("/signup", h.Auth.SingUp)
 }
